--- a/public/src/css/login.css
+++ b/public/src/css/login.css
@@ -7,11 +7,13 @@ body{
 
 .row{
     height: 54em;
+    width: 100%;
 }
 
 .form{
-    padding-top: 35%;
-    padding-left: 10%;
+    padding-top: 50%;
+    padding-left: 30%;
+    padding-right: 0%;
 }
 
 form table{
@@ -21,25 +23,25 @@ form table{
 
 .th1{
     background-color: rgb(165, 93, 93);
-    width: 97px;
+    width: 149px;
     height: 4px;
 }
 
 .th2{
     background-color: rgb(93, 165, 97);
-    width: 97px;
+    width: 149px;
     height: 4px;
 }
 
 .th3{
     background-color: rgb(93, 136, 165);
-    width: 97px;
+    width: 149px;
     height: 4px;
 }
 
 .th4{
     background-color: rgb(164, 165, 93);
-    width: 97px;
+    width: 149px;
     height: 4px;
 }
 
@@ -49,15 +51,23 @@ h1, h2, h3, p, label{
 }
 
 .wellcome{
-    padding: 30%;
+    padding-top: 30%;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 70px;
 }
 
 .divWellcome{
     height: auto;
     width: 100%;
+    padding-top: 0%;
+    text-align: center;
 }
 
 .divWellcome h1{
+    text-align: center;
+}
+
+.left{
     text-align: center;
 }
 
@@ -71,8 +81,8 @@ footer p{
     padding: 30px 100px 10px ;
 }
 
-input[type=email], input[type=password] {
-    width: 70%;
+input[type=email], input[type=password], input[type=text]{
+    width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -82,11 +92,40 @@ input[type=email], input[type=password] {
     background-color: rgb(48, 48, 48);
 }
 
+input[type = "file"] {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+label[for = "file"] {
+    font-size: 14px;
+    font-weight: 600;
+    color: #fff;
+    background-color: rgb(48, 48, 48);
+    display: inline-block;
+    transition: all .5s;
+    cursor: pointer;
+    padding: 15px 40px !important;
+    text-transform: uppercase;
+    width: fit-content;
+    text-align: center;
+    align-content: center;
+    float:none;
+}
+
+
+
+
+
 button{
     background-color: rgb(48, 48, 48);
     color: white;
     padding: 14px 20px;
-    padding-right: 30px;
+    padding-right: 20;
     margin: 8px 0;
     border: none;
     cursor: pointer;
@@ -106,9 +145,20 @@ form label{
 }
 
 .column{
-    width: 50%;
     height: 100%;
     float: left;
+}
+
+.left{
+    width: 50%;
+}
+
+.rigth{
+    width: 50%;
+}
+
+.disabe{
+    display: none
 }
 
 
