--- a/public/src/views/chat.html
+++ b/public/src/views/chat.html
@@ -54,8 +54,9 @@
                                             <input class="form-control p-20" type="text" placeholder="Search contact">
                                         </div>
                                         <ul class="chatonline style-none" id="divUsuarios">
+                                            <!--
                                             <li>
-                                                <a href="javascript:void(0)" class="active"> Chat of <span> Games</span></a>
+                                                <a href="javascript:void(0)" class="active"> Chat of <span> General</span></a>
                                             </li>
                                             <li>
                                                 <a href="javascript:void(0)"><img src="../../assets/images/users/user_uknow.jpg" alt="user-img" class="img-circle"> <span>Varun Dhavan <small class="text-success">online</small></span></a>
@@ -81,7 +82,8 @@
                                             <li>
                                                 <a href="javascript:void(0)"><img src="../../assets/images/users/user_uknow.jpg" alt="user-img" class="img-circle"> <span>Pwandeep rajan <small class="text-success">online</small></span></a>
                                             </li>
-                                            <li class="p-20"></li>
+                                            -->
+                                            <!-- <li class="p-20"></li> -->
                                         </ul>
                                     </div>
                                 </div>
@@ -90,13 +92,13 @@
                                 <div class="chat-right-aside">
                                     <div class="chat-main-header">
                                         <div class="p-20 b-b">
-                                            <h3 class="box-title">Room Chat <small>Video Games</small></h3>
+                                            <h3 class="box-title">Room Chat <small id="chatTitle">General</small></h3>
                                         </div>
                                     </div>
 
                                     <div class="chat-rbox">
-                                        <ul class="chat-list p-20" id="divChatbox">
-                                            <!--chat Row -->
+                                        <ul class="chat-list p-20" id="divChatbox" idname = "chat">
+                                            <!--
                                             <li>
                                                 <div class="chat-img"><img src="../../assets/images/users/user_uknow.jpg" alt="user" /></div>
                                                 <div class="chat-content">
@@ -105,7 +107,6 @@
                                                 </div>
                                                 <div class="chat-time">10:56 am</div>
                                             </li>
-                                            <!--chat Row -->
                                             <li>
                                                 <div class="chat-img"><img src="../../assets/images/users/user_uknow.jpg" alt="user" /></div>
                                                 <div class="chat-content">
@@ -114,7 +115,6 @@
                                                 </div>
                                                 <div class="chat-time">10:57 am</div>
                                             </li>
-                                            <!--chat Row -->
                                             <li class="reverse">
                                                 <div class="chat-content">
                                                     <h5>Steave Doe</h5>
@@ -123,7 +123,6 @@
                                                 <div class="chat-img"><img src="../../assets/images/users/user_uknow.jpg" alt="user" /></div>
                                                 <div class="chat-time">10:57 am</div>
                                             </li>
-                                            <!--chat Row -->
                                             <li class="reverse">
                                                 <div class="chat-content">
                                                     <h5>Steave Doe</h5>
@@ -132,7 +131,6 @@
                                                 <div class="chat-img"><img src="../../assets/images/users/user_uknow.jpg" alt="user" /></div>
                                                 <div class="chat-time">10:57 am</div>
                                             </li>
-                                            <!--chat Row -->
                                             <li>
                                                 <div class="chat-img"><img src="../../assets/images/users/user_uknow.jpg" alt="user" /></div>
                                                 <div class="chat-content">
@@ -141,9 +139,6 @@
                                                 </div>
                                                 <div class="chat-time">11:00 am</div>
                                             </li>
-                                            <!--chat Row -->
-
-                                            <!--chat Row -->
                                             <li>
                                                 <div class="chat-img"><img src="../../assets/images/users/user_uknow.jpg" alt="user" /></div>
                                                 <div class="chat-content">
@@ -152,9 +147,6 @@
                                                 </div>
                                                 <div class="chat-time">11:00 am</div>
                                             </li>
-                                            <!--chat Row -->
-
-                                            <!--chat Row -->
                                             <li>
                                                 <div class="chat-img"><img src="../../assets/images/users/user_uknow.jpg" alt="user" /></div>
                                                 <div class="chat-content">
@@ -163,9 +155,11 @@
                                                 </div>
                                                 <div class="chat-time">11:00 am</div>
                                             </li>
-                                            <!--chat Row -->
-
+                                            -->
                                         </ul>
+                                        <div id="usersChat">
+
+                                        </div>
                                     </div>
                                     <div class="card-body b-t">
                                         <div class="row">
@@ -173,7 +167,7 @@
                                                 <textarea placeholder="Write your message here" class="form-control b-0"></textarea>
                                             </div>
                                             <div class="col-4 text-right">
-                                                <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-paper-plane-o"></i> </button>
+                                                <button id="send" type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-paper-plane-o"></i> </button>
                                             </div>
                                         </div>
                                     </div>
